[package]
name = "hexegui"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
eframe = { version = "0.33", features = ["web_screen_reader", "wgpu"] }
egui = { version = "0.33", features = ["callstack", "default"] }
egui-wgpu = { version = "0.33" }
egui_extras = { version = "0.33", features = ["default", "image"] }
egui_font_loader = "1.0.0"
egui_hooks = "0.10.0"
oem_cp = "2.1.1"
egui_tiles = "0.14.0"
